<resources>
    <string name="app_name">SymLabo2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">SYM Labo 2</string>
    <string name="nav_header_subtitle">Protocoles applicatifs</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_home">Accueil</string>
    <string name="title_asynchrone">Asynchrone</string>
    <string name="title_differee">Differée</string>
    <string name="title_objets">Objets</string>
    <string name="title_compressee">Compressée</string>
    <string name="title_graphql">GraphQL</string>
    <string name="title_menu_group">Activités de labo</string>

    <string name="button_envoyer">Envoyer</string>

    <!-- async activity -->
    <string name="label_ecire">Ecrire</string>
    <string name="label_result">Résultat</string>

    <!-- object activity -->
    <string name="button_XML">Envoyer XML</string>
    <string name="button_JSON">Envoyer JSON</string>
    <string name="button_TEXT">Envoyer Text</string>

    <!-- differee activity -->
    <string name="label_connecte">Connecté : </string>
    <string name="label_element_attente">Nombre de requête en attente : </string>


    <!-- ... activity -->
    <string name="radio_button_XML">xml</string>
    <string name="radio_button_JSON">json</string>
    <string name="radio_button_TEXT">txt</string>

    <string name="post_title" translatable="false">Title</string>
    <string name="post_description" translatable="false">Description</string>
    <string name="post_content" translatable="false">Content</string>
    <string name="post_date" translatable="false">Date</string>

    <string name="text_request" translatable="false">Requête</string>
    <string name="text_response" translatable="false">Réponse</string>



</resources>
