<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/differe_waiting_elem_txt"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DIffereeActivity">

    <TextView
        android:id="@+id/differee_connected_text"
        android:layout_width="79dp"
        android:layout_height="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/label_connecte"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout"
        app:layout_constraintEnd_toStartOf="@+id/differee_connected_state_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/differee_connected_state_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="17dp"
        android:layout_marginBottom="8dp"
        android:text="Null"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout"
        app:layout_constraintStart_toEndOf="@+id/differee_connected_text"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/differe_send_button"
        android:layout_width="359dp"
        android:layout_height="41dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/button_envoyer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.111"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="7dp"
        app:layout_constraintBottom_toTopOf="@+id/differe_send_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/differee_connected_state_text">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/differe_input_text"
            android:layout_width="325dp"
            android:layout_height="match_parent" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/differe_waiting_request_text"
        android:layout_width="208dp"
        android:layout_height="21dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="283dp"
        android:layout_marginRight="283dp"
        android:text="@string/label_element_attente"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/differe_send_button" />

    <TextView
        android:id="@+id/differe_nbr_waiting_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="20dp"
        android:text="Null"
        app:layout_constraintStart_toEndOf="@+id/differe_waiting_request_text"
        app:layout_constraintTop_toBottomOf="@+id/differe_send_button" />

</android.support.constraint.ConstraintLayout>
